test/src/LBNFParser.g4
// -*- Java -*- File generated by the BNF Converter (bnfc 2.9.5).

// Parser definition for use with ANTLRv4
parser grammar LBNFParser;

options {
  tokenVocab = LBNFLexer;
}


start_Grammar returns [ lbnf.Absyn.Grammar result ]
  : x=grammar_ EOF
    { $result = $x.result; }
  ;
start_ListDef returns [ lbnf.Absyn.ListDef result ]
  : x=listDef EOF
    { $result = $x.result; }
  ;
start_ListItem returns [ lbnf.Absyn.ListItem result ]
  : x=listItem EOF
    { $result = $x.result; }
  ;
start_Def returns [ lbnf.Absyn.Def result ]
  : x=def EOF
    { $result = $x.result; }
  ;
start_Item returns [ lbnf.Absyn.Item result ]
  : x=item EOF
    { $result = $x.result; }
  ;
start_Cat returns [ lbnf.Absyn.Cat result ]
  : x=cat EOF
    { $result = $x.result; }
  ;
start_Label returns [ lbnf.Absyn.Label result ]
  : x=label EOF
    { $result = $x.result; }
  ;
start_LabelId returns [ lbnf.Absyn.LabelId result ]
  : x=labelId EOF
    { $result = $x.result; }
  ;
start_ProfItem returns [ lbnf.Absyn.ProfItem result ]
  : x=profItem EOF
    { $result = $x.result; }
  ;
start_IntList returns [ lbnf.Absyn.IntList result ]
  : x=intList EOF
    { $result = $x.result; }
  ;
start_ListInteger returns [ lbnf.Absyn.ListInteger result ]
  : x=listInteger EOF
    { $result = $x.result; }
  ;
start_ListIntList returns [ lbnf.Absyn.ListIntList result ]
  : x=listIntList EOF
    { $result = $x.result; }
  ;
start_ListProfItem returns [ lbnf.Absyn.ListProfItem result ]
  : x=listProfItem EOF
    { $result = $x.result; }
  ;
start_ListString returns [ lbnf.Absyn.ListString result ]
  : x=listString EOF
    { $result = $x.result; }
  ;
start_ListRHS returns [ lbnf.Absyn.ListRHS result ]
  : x=listRHS EOF
    { $result = $x.result; }
  ;
start_RHS returns [ lbnf.Absyn.RHS result ]
  : x=rHS EOF
    { $result = $x.result; }
  ;
start_MinimumSize returns [ lbnf.Absyn.MinimumSize result ]
  : x=minimumSize EOF
    { $result = $x.result; }
  ;
start_Reg2 returns [ lbnf.Absyn.Reg result ]
  : x=reg2 EOF
    { $result = $x.result; }
  ;
start_Reg1 returns [ lbnf.Absyn.Reg result ]
  : x=reg1 EOF
    { $result = $x.result; }
  ;
start_Reg3 returns [ lbnf.Absyn.Reg result ]
  : x=reg3 EOF
    { $result = $x.result; }
  ;
start_Reg returns [ lbnf.Absyn.Reg result ]
  : x=reg EOF
    { $result = $x.result; }
  ;
start_ListIdent returns [ lbnf.Absyn.ListIdent result ]
  : x=listIdent EOF
    { $result = $x.result; }
  ;

grammar_ returns [ lbnf.Absyn.Grammar result ]
  : p_1_1=listDef
    { $result = new lbnf.Absyn.MkGrammar($p_1_1.result); }
  ;
listDef returns [ lbnf.Absyn.ListDef result ]
  :  /* empty */
    { $result = new lbnf.Absyn.ListDef(); }
  | p_2_1=listDef p_2_2=def Surrogate_id_SYMB_0
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
listItem returns [ lbnf.Absyn.ListItem result ]
  :  /* empty */
    { $result = new lbnf.Absyn.ListItem(); }
  | p_2_1=listItem p_2_2=item
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
def returns [ lbnf.Absyn.Def result ]
  : p_1_1=label Surrogate_id_SYMB_1 p_1_3=cat Surrogate_id_SYMB_2 p_1_5=listItem
    { $result = new lbnf.Absyn.Rule($p_1_1.result,$p_1_3.result,$p_1_5.result); }
  | Surrogate_id_SYMB_19 p_2_2=STRING
    { $result = new lbnf.Absyn.Comment($p_2_2.getText().substring(1, $p_2_2.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_19 p_3_2=STRING p_3_3=STRING
    { $result = new lbnf.Absyn.Comments($p_3_2.getText().substring(1, $p_3_2.getText().length()-1).translateEscapes(),$p_3_3.getText().substring(1, $p_3_3.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_23 p_4_2=label Surrogate_id_SYMB_1 p_4_4=cat Surrogate_id_SYMB_2 p_4_6=listItem
    { $result = new lbnf.Absyn.Internal($p_4_2.result,$p_4_4.result,$p_4_6.result); }
  | Surrogate_id_SYMB_33 p_5_2=IDENT p_5_3=reg
    { $result = new lbnf.Absyn.Token($p_5_2.getText(),$p_5_3.result); }
  | Surrogate_id_SYMB_28 Surrogate_id_SYMB_33 p_6_3=IDENT p_6_4=reg
    { $result = new lbnf.Absyn.PosToken($p_6_3.getText(),$p_6_4.result); }
  | Surrogate_id_SYMB_21 p_7_2=listIdent
    { $result = new lbnf.Absyn.Entryp($p_7_2.result); }
  | Surrogate_id_SYMB_30 p_8_2=minimumSize p_8_3=cat p_8_4=STRING
    { $result = new lbnf.Absyn.Separator($p_8_2.result,$p_8_3.result,$p_8_4.getText().substring(1, $p_8_4.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_32 p_9_2=minimumSize p_9_3=cat p_9_4=STRING
    { $result = new lbnf.Absyn.Terminator($p_9_2.result,$p_9_3.result,$p_9_4.getText().substring(1, $p_9_4.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_18 p_10_2=IDENT p_10_3=INTEGER
    { $result = new lbnf.Absyn.Coercions($p_10_2.getText(),Integer.parseInt($p_10_3.getText())); }
  | Surrogate_id_SYMB_29 p_11_2=IDENT Surrogate_id_SYMB_2 p_11_4=listRHS
    { $result = new lbnf.Absyn.Rules($p_11_2.getText(),$p_11_4.result); }
  | Surrogate_id_SYMB_24 p_12_2=listString
    { $result = new lbnf.Absyn.Layout($p_12_2.result); }
  | Surrogate_id_SYMB_24 Surrogate_id_SYMB_31 p_13_3=listString
    { $result = new lbnf.Absyn.LayoutStop($p_13_3.result); }
  | Surrogate_id_SYMB_24 Surrogate_id_SYMB_34
    { $result = new lbnf.Absyn.LayoutTop(); }
  ;
item returns [ lbnf.Absyn.Item result ]
  : p_1_1=STRING
    { $result = new lbnf.Absyn.Terminal($p_1_1.getText().substring(1, $p_1_1.getText().length()-1).translateEscapes()); }
  | p_2_1=cat
    { $result = new lbnf.Absyn.NTerminal($p_2_1.result); }
  ;
cat returns [ lbnf.Absyn.Cat result ]
  : Surrogate_id_SYMB_3 p_1_2=cat Surrogate_id_SYMB_4
    { $result = new lbnf.Absyn.ListCat($p_1_2.result); }
  | p_2_1=IDENT
    { $result = new lbnf.Absyn.IdCat($p_2_1.getText()); }
  ;
label returns [ lbnf.Absyn.Label result ]
  : p_1_1=labelId
    { $result = new lbnf.Absyn.LabNoP($p_1_1.result); }
  | p_2_1=labelId p_2_2=listProfItem
    { $result = new lbnf.Absyn.LabP($p_2_1.result,$p_2_2.result); }
  | p_3_1=labelId p_3_2=labelId p_3_3=listProfItem
    { $result = new lbnf.Absyn.LabPF($p_3_1.result,$p_3_2.result,$p_3_3.result); }
  | p_4_1=labelId p_4_2=labelId
    { $result = new lbnf.Absyn.LabF($p_4_1.result,$p_4_2.result); }
  ;
labelId returns [ lbnf.Absyn.LabelId result ]
  : p_1_1=IDENT
    { $result = new lbnf.Absyn.Id($p_1_1.getText()); }
  | Surrogate_id_SYMB_5
    { $result = new lbnf.Absyn.Wild(); }
  | Surrogate_id_SYMB_3 Surrogate_id_SYMB_4
    { $result = new lbnf.Absyn.ListE(); }
  | Surrogate_id_SYMB_6 Surrogate_id_SYMB_7 Surrogate_id_SYMB_8
    { $result = new lbnf.Absyn.ListCons(); }
  | Surrogate_id_SYMB_6 Surrogate_id_SYMB_7 Surrogate_id_SYMB_3 Surrogate_id_SYMB_4 Surrogate_id_SYMB_8
    { $result = new lbnf.Absyn.ListOne(); }
  ;
profItem returns [ lbnf.Absyn.ProfItem result ]
  : Surrogate_id_SYMB_6 Surrogate_id_SYMB_3 p_1_3=listIntList Surrogate_id_SYMB_4 Surrogate_id_SYMB_9 Surrogate_id_SYMB_3 p_1_7=listInteger Surrogate_id_SYMB_4 Surrogate_id_SYMB_8
    { $result = new lbnf.Absyn.ProfIt($p_1_3.result,$p_1_7.result); }
  ;
intList returns [ lbnf.Absyn.IntList result ]
  : Surrogate_id_SYMB_3 p_1_2=listInteger Surrogate_id_SYMB_4
    { $result = new lbnf.Absyn.Ints($p_1_2.result); }
  ;
listInteger returns [ lbnf.Absyn.ListInteger result ]
  :  /* empty */
    { $result = new lbnf.Absyn.ListInteger(); }
  | p_2_1=INTEGER
    { $result = new lbnf.Absyn.ListInteger(); $result.addLast(Integer.parseInt($p_2_1.getText())); }
  | p_3_1=INTEGER Surrogate_id_SYMB_9 p_3_3=listInteger
    { $result = $p_3_3.result; $result.addFirst(Integer.parseInt($p_3_1.getText())); }
  ;
listIntList returns [ lbnf.Absyn.ListIntList result ]
  :  /* empty */
    { $result = new lbnf.Absyn.ListIntList(); }
  | p_2_1=intList
    { $result = new lbnf.Absyn.ListIntList(); $result.addLast($p_2_1.result); }
  | p_3_1=intList Surrogate_id_SYMB_9 p_3_3=listIntList
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
listProfItem returns [ lbnf.Absyn.ListProfItem result ]
  : p_1_1=profItem
    { $result = new lbnf.Absyn.ListProfItem(); $result.addLast($p_1_1.result); }
  | p_2_1=profItem p_2_2=listProfItem
    { $result = $p_2_2.result; $result.addFirst($p_2_1.result); }
  ;
listString returns [ lbnf.Absyn.ListString result ]
  : p_1_1=STRING
    { $result = new lbnf.Absyn.ListString(); $result.addLast($p_1_1.getText().substring(1, $p_1_1.getText().length()-1).translateEscapes()); }
  | p_2_1=STRING Surrogate_id_SYMB_9 p_2_3=listString
    { $result = $p_2_3.result; $result.addFirst($p_2_1.getText().substring(1, $p_2_1.getText().length()-1).translateEscapes()); }
  ;
listRHS returns [ lbnf.Absyn.ListRHS result ]
  : p_1_1=rHS
    { $result = new lbnf.Absyn.ListRHS(); $result.addLast($p_1_1.result); }
  | p_2_1=rHS Surrogate_id_SYMB_10 p_2_3=listRHS
    { $result = $p_2_3.result; $result.addFirst($p_2_1.result); }
  ;
rHS returns [ lbnf.Absyn.RHS result ]
  : p_1_1=listItem
    { $result = new lbnf.Absyn.MkRHS($p_1_1.result); }
  ;
minimumSize returns [ lbnf.Absyn.MinimumSize result ]
  : Surrogate_id_SYMB_27
    { $result = new lbnf.Absyn.MNonempty(); }
  |  /* empty */
    { $result = new lbnf.Absyn.MEmpty(); }
  ;
reg2 returns [ lbnf.Absyn.Reg result ]
  : p_1_1=reg2 p_1_2=reg3
    { $result = new lbnf.Absyn.RSeq($p_1_1.result,$p_1_2.result); }
  | p_2_1=reg3
    { $result = $p_2_1.result; }
  ;
reg1 returns [ lbnf.Absyn.Reg result ]
  : p_1_1=reg1 Surrogate_id_SYMB_10 p_1_3=reg2
    { $result = new lbnf.Absyn.RAlt($p_1_1.result,$p_1_3.result); }
  | p_2_1=reg2 Surrogate_id_SYMB_11 p_2_3=reg2
    { $result = new lbnf.Absyn.RMinus($p_2_1.result,$p_2_3.result); }
  | p_3_1=reg2
    { $result = $p_3_1.result; }
  ;
reg3 returns [ lbnf.Absyn.Reg result ]
  : p_1_1=reg3 Surrogate_id_SYMB_12
    { $result = new lbnf.Absyn.RStar($p_1_1.result); }
  | p_2_1=reg3 Surrogate_id_SYMB_13
    { $result = new lbnf.Absyn.RPlus($p_2_1.result); }
  | p_3_1=reg3 Surrogate_id_SYMB_14
    { $result = new lbnf.Absyn.ROpt($p_3_1.result); }
  | Surrogate_id_SYMB_22
    { $result = new lbnf.Absyn.REps(); }
  | p_5_1=CHAR
    { $result = new lbnf.Absyn.RChar($p_5_1.getText().substring(1, $p_5_1.getText().length()-1).translateEscapes().charAt(0)); }
  | Surrogate_id_SYMB_3 p_6_2=STRING Surrogate_id_SYMB_4
    { $result = new lbnf.Absyn.RAlts($p_6_2.getText().substring(1, $p_6_2.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_15 p_7_2=STRING Surrogate_id_SYMB_16
    { $result = new lbnf.Absyn.RSeqs($p_7_2.getText().substring(1, $p_7_2.getText().length()-1).translateEscapes()); }
  | Surrogate_id_SYMB_20
    { $result = new lbnf.Absyn.RDigit(); }
  | Surrogate_id_SYMB_25
    { $result = new lbnf.Absyn.RLetter(); }
  | Surrogate_id_SYMB_35
    { $result = new lbnf.Absyn.RUpper(); }
  | Surrogate_id_SYMB_26
    { $result = new lbnf.Absyn.RLower(); }
  | Surrogate_id_SYMB_17
    { $result = new lbnf.Absyn.RAny(); }
  | Surrogate_id_SYMB_6 p_13_2=reg Surrogate_id_SYMB_8
    { $result = $p_13_2.result; }
  ;
reg returns [ lbnf.Absyn.Reg result ]
  : p_1_1=reg1
    { $result = $p_1_1.result; }
  ;
listIdent returns [ lbnf.Absyn.ListIdent result ]
  : p_1_1=IDENT
    { $result = new lbnf.Absyn.ListIdent(); $result.addLast($p_1_1.getText()); }
  | p_2_1=IDENT Surrogate_id_SYMB_9 p_2_3=listIdent
    { $result = $p_2_3.result; $result.addFirst($p_2_1.getText()); }
  ;

