test/src/lbnf/LBNFParser.java
// Generated from lbnf\LBNFParser.g4 by ANTLR 4.5.3
package lbnf;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class LBNFParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int Surrogate_id_SYMB_0 = 1, Surrogate_id_SYMB_1 = 2, Surrogate_id_SYMB_2 = 3,
			Surrogate_id_SYMB_3 = 4, Surrogate_id_SYMB_4 = 5, Surrogate_id_SYMB_5 = 6, Surrogate_id_SYMB_6 = 7,
			Surrogate_id_SYMB_7 = 8, Surrogate_id_SYMB_8 = 9, Surrogate_id_SYMB_9 = 10, Surrogate_id_SYMB_10 = 11,
			Surrogate_id_SYMB_11 = 12, Surrogate_id_SYMB_12 = 13, Surrogate_id_SYMB_13 = 14, Surrogate_id_SYMB_14 = 15,
			Surrogate_id_SYMB_15 = 16, Surrogate_id_SYMB_16 = 17, Surrogate_id_SYMB_17 = 18, Surrogate_id_SYMB_18 = 19,
			Surrogate_id_SYMB_19 = 20, Surrogate_id_SYMB_20 = 21, Surrogate_id_SYMB_21 = 22, Surrogate_id_SYMB_22 = 23,
			Surrogate_id_SYMB_23 = 24, Surrogate_id_SYMB_24 = 25, Surrogate_id_SYMB_25 = 26, Surrogate_id_SYMB_26 = 27,
			Surrogate_id_SYMB_27 = 28, Surrogate_id_SYMB_28 = 29, Surrogate_id_SYMB_29 = 30, Surrogate_id_SYMB_30 = 31,
			Surrogate_id_SYMB_31 = 32, Surrogate_id_SYMB_32 = 33, Surrogate_id_SYMB_33 = 34, Surrogate_id_SYMB_34 = 35,
			Surrogate_id_SYMB_35 = 36, COMMENT_antlr_builtin = 37, MULTICOMMENT_antlr_builtin = 38, INTEGER = 39,
			IDENT = 40, WS = 41, ErrorToken = 42, STRING = 43, CHAR = 44, STRINGESC = 45;
	public static final int RULE_start_Grammar = 0, RULE_start_ListDef = 1, RULE_start_ListItem = 2, RULE_start_Def = 3,
			RULE_start_Item = 4, RULE_start_Cat = 5, RULE_start_Label = 6, RULE_start_LabelId = 7,
			RULE_start_ProfItem = 8, RULE_start_IntList = 9, RULE_start_ListInteger = 10, RULE_start_ListIntList = 11,
			RULE_start_ListProfItem = 12, RULE_start_ListString = 13, RULE_start_ListRHS = 14, RULE_start_RHS = 15,
			RULE_start_MinimumSize = 16, RULE_start_Reg2 = 17, RULE_start_Reg1 = 18, RULE_start_Reg3 = 19,
			RULE_start_Reg = 20, RULE_start_ListIdent = 21, RULE_grammar_ = 22, RULE_listDef = 23, RULE_listItem = 24,
			RULE_def = 25, RULE_item = 26, RULE_cat = 27, RULE_label = 28, RULE_labelId = 29, RULE_profItem = 30,
			RULE_intList = 31, RULE_listInteger = 32, RULE_listIntList = 33, RULE_listProfItem = 34,
			RULE_listString = 35, RULE_listRHS = 36, RULE_rHS = 37, RULE_minimumSize = 38, RULE_reg2 = 39,
			RULE_reg1 = 40, RULE_reg3 = 41, RULE_reg = 42, RULE_listIdent = 43;
	public static final String[] ruleNames = { "start_Grammar", "start_ListDef", "start_ListItem", "start_Def",
			"start_Item", "start_Cat", "start_Label", "start_LabelId", "start_ProfItem", "start_IntList",
			"start_ListInteger", "start_ListIntList", "start_ListProfItem", "start_ListString", "start_ListRHS",
			"start_RHS", "start_MinimumSize", "start_Reg2", "start_Reg1", "start_Reg3", "start_Reg", "start_ListIdent",
			"grammar_", "listDef", "listItem", "def", "item", "cat", "label", "labelId", "profItem", "intList",
			"listInteger", "listIntList", "listProfItem", "listString", "listRHS", "rHS", "minimumSize", "reg2", "reg1",
			"reg3", "reg", "listIdent" };

	private static final String[] _LITERAL_NAMES = { null, "';'", "'.'", "'::='", "'['", "']'", "'_'", "'('", "':'",
			"')'", "','", "'|'", "'-'", "'*'", "'+'", "'?'", "'{'", "'}'", "'char'", "'coercions'", "'comment'",
			"'digit'", "'entrypoints'", "'eps'", "'internal'", "'layout'", "'letter'", "'lower'", "'nonempty'",
			"'position'", "'rules'", "'separator'", "'stop'", "'terminator'", "'token'", "'toplevel'", "'upper'", null,
			null, null, null, null, null, "'\"'", "'''", "'\\'" };
	private static final String[] _SYMBOLIC_NAMES = { null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1",
			"Surrogate_id_SYMB_2", "Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5",
			"Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", "Surrogate_id_SYMB_8", "Surrogate_id_SYMB_9",
			"Surrogate_id_SYMB_10", "Surrogate_id_SYMB_11", "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13",
			"Surrogate_id_SYMB_14", "Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", "Surrogate_id_SYMB_17",
			"Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", "Surrogate_id_SYMB_20", "Surrogate_id_SYMB_21",
			"Surrogate_id_SYMB_22", "Surrogate_id_SYMB_23", "Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25",
			"Surrogate_id_SYMB_26", "Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", "Surrogate_id_SYMB_29",
			"Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", "Surrogate_id_SYMB_32", "Surrogate_id_SYMB_33",
			"Surrogate_id_SYMB_34", "Surrogate_id_SYMB_35", "COMMENT_antlr_builtin", "MULTICOMMENT_antlr_builtin",
			"INTEGER", "IDENT", "WS", "ErrorToken", "STRING", "CHAR", "STRINGESC" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "LBNFParser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public LBNFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class Start_GrammarContext extends ParserRuleContext {
		public lbnf.Absyn.Grammar result;
		public Grammar_Context x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public Grammar_Context grammar_() {
			return getRuleContext(Grammar_Context.class, 0);
		}

		public Start_GrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_Grammar;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_Grammar(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_Grammar(this);
		}
	}

	public final Start_GrammarContext start_Grammar() throws RecognitionException {
		Start_GrammarContext _localctx = new Start_GrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_Grammar);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(88);
				((Start_GrammarContext) _localctx).x = grammar_();
				setState(89);
				match(EOF);
				((Start_GrammarContext) _localctx).result = ((Start_GrammarContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_ListDefContext extends ParserRuleContext {
		public lbnf.Absyn.ListDef result;
		public ListDefContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public ListDefContext listDef() {
			return getRuleContext(ListDefContext.class, 0);
		}

		public Start_ListDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_ListDef;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_ListDef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_ListDef(this);
		}
	}

	public final Start_ListDefContext start_ListDef() throws RecognitionException {
		Start_ListDefContext _localctx = new Start_ListDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start_ListDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(92);
				((Start_ListDefContext) _localctx).x = listDef(0);
				setState(93);
				match(EOF);
				((Start_ListDefContext) _localctx).result = ((Start_ListDefContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_ListItemContext extends ParserRuleContext {
		public lbnf.Absyn.ListItem result;
		public ListItemContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public ListItemContext listItem() {
			return getRuleContext(ListItemContext.class, 0);
		}

		public Start_ListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_ListItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_ListItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_ListItem(this);
		}
	}

	public final Start_ListItemContext start_ListItem() throws RecognitionException {
		Start_ListItemContext _localctx = new Start_ListItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_start_ListItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(96);
				((Start_ListItemContext) _localctx).x = listItem(0);
				setState(97);
				match(EOF);
				((Start_ListItemContext) _localctx).result = ((Start_ListItemContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_DefContext extends ParserRuleContext {
		public lbnf.Absyn.Def result;
		public DefContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public DefContext def() {
			return getRuleContext(DefContext.class, 0);
		}

		public Start_DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_Def;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_Def(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_Def(this);
		}
	}

	public final Start_DefContext start_Def() throws RecognitionException {
		Start_DefContext _localctx = new Start_DefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_start_Def);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(100);
				((Start_DefContext) _localctx).x = def();
				setState(101);
				match(EOF);
				((Start_DefContext) _localctx).result = ((Start_DefContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_ItemContext extends ParserRuleContext {
		public lbnf.Absyn.Item result;
		public ItemContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public ItemContext item() {
			return getRuleContext(ItemContext.class, 0);
		}

		public Start_ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_Item;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_Item(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_Item(this);
		}
	}

	public final Start_ItemContext start_Item() throws RecognitionException {
		Start_ItemContext _localctx = new Start_ItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_start_Item);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(104);
				((Start_ItemContext) _localctx).x = item();
				setState(105);
				match(EOF);
				((Start_ItemContext) _localctx).result = ((Start_ItemContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_CatContext extends ParserRuleContext {
		public lbnf.Absyn.Cat result;
		public CatContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public CatContext cat() {
			return getRuleContext(CatContext.class, 0);
		}

		public Start_CatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_Cat;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_Cat(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_Cat(this);
		}
	}

	public final Start_CatContext start_Cat() throws RecognitionException {
		Start_CatContext _localctx = new Start_CatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_start_Cat);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				((Start_CatContext) _localctx).x = cat();
				setState(109);
				match(EOF);
				((Start_CatContext) _localctx).result = ((Start_CatContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_LabelContext extends ParserRuleContext {
		public lbnf.Absyn.Label result;
		public LabelContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public LabelContext label() {
			return getRuleContext(LabelContext.class, 0);
		}

		public Start_LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_Label;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_Label(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).exitStart_Label(this);
		}
	}

	public final Start_LabelContext start_Label() throws RecognitionException {
		Start_LabelContext _localctx = new Start_LabelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_start_Label);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(112);
				((Start_LabelContext) _localctx).x = label();
				setState(113);
				match(EOF);
				((Start_LabelContext) _localctx).result = ((Start_LabelContext) _localctx).x.result;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_LabelIdContext extends ParserRuleContext {
		public lbnf.Absyn.LabelId result;
		public LabelIdContext x;

		public TerminalNode EOF() {
			return getToken(LBNFParser.EOF, 0);
		}

		public LabelIdContext labelId() {
			return getRuleContext(LabelIdContext.class, 0);
		}

		public Start_LabelIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_start_LabelId;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LBNFParserListener)
				((LBNFParserListener) listener).enterStart_LabelId(this);
		}

